# alsa-lib

./: AlsaConfig.cmake.in  CMakeLists.txt  preconf.sh
